@@ -1,0 +1,3 @@
+MD5 ab97c10a35c58ca22d97070340241aa6 man-pages-2.69.tar.bz2 1857024
+RMD160 c837781982a98ca720a08cd95cf70fb10f300dab man-pages-2.69.tar.bz2 1857024
+SHA256 5b85142501626cf4c292d6f25751faa189f49a55fac7a66abb78d5ade7cd9fd0 man-pages-2.69.tar.bz2 1857024
