@@ -1,6 +1,11 @@
 # ChangeLog for sys-apps/man-pages
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/man-pages/ChangeLog,v 1.97 2007/11/28 07:41:58 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/man-pages/ChangeLog,v 1.98 2007/12/04 02:52:08 vapier Exp $
+
+*man-pages-2.69 (04 Dec 2007)
+
+  04 Dec 2007; Mike Frysinger <vapier@gentoo.org> +man-pages-2.69.ebuild:
+  Version bump.
 
 *man-pages-2.68 (28 Nov 2007)
 
